upgrade bouncy castle, pgpainless and logback